k8s/ingress/05-patch-gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway-service
  namespace: agentic
  labels:
    app: api-gateway
  annotations:
    cloud.google.com/backend-config: '{"default": "api-gateway-backend"}'
    cloud.google.com/neg: '{"ingress": true}'
spec:
  type: NodePort
  selector:
    app: api-gateway
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
